force-app/main/default/objects/Eligibility_Check_Assignment__c/Eligibility_Check_Assignment__c.object-meta.xml
<CustomObject>
    <label>Eligibility Check Assignment</label>
    <nameField>
        <displayFormat>ECA-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Check Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>