force-app/main/default/objects/Eligibility_Check_Assignment__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>