force-app/main/default/objects/Eligibility_Check_Assignment__c/fields/Grant_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Grant_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Eligibility Check Assignments</relationshipLabel>
    <relationshipName>Eligibility_Check_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>