force-app/main/default/objects/Eligibility_Check_Assignment__c/fields/Grants_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Grants_Team_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Team Member</label>
    <referenceTo>Grants_Team_Members__c</referenceTo>
    <relationshipLabel>Eligibility Check Assignments</relationshipLabel>
    <relationshipName>Eligibility_Check_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>