force-app/main/default/objects/Eligibility_Check_Assignment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Eligibility Check Assignments</relationshipLabel>
    <relationshipName>Eligibility_Check_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>